Atualizar o style.css

--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,21 @@
     background: linear-gradient(#87CEEB, #E0F6FF);
 }
 
+.score {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 1.8rem;
+
+}
+
+.score--value {
+    font-weight: 700;
+    font-size: 4.5rem;
+    display: block;
+    margin-top: -10px;
+}
+
 .menu-screen {
     position: absolute;
     display: none;
